--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.73.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-webview": "13.6.4"
+    "react-native-webview": "13.6.4",
+    "@expo/vector-icons": "^14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
